Move JMockit init for Maven